# spca-smart-scale-system

backend/: cert.pem  csr.pem  key.pem  package-lock.json  package.json
backend/src/: index.js
backend/src/db/: conn.js
backend/src/db/dbFunctions/: centre.js  chat.js  dog.js  scale.js  user.js
backend/src/db/schema/: centre.js  chat.js  dog.js  scale.js  user.js
backend/src/middleware/: firebaseAuth.js
backend/src/routes/api/: centre.js  chat.js  dog.js  index.js  scale.js  user.js
embedded/: weight_reading.c
embedded/pico/capstone/: CMakeLists.txt  build_firmware  http.c  http.h  main.c  start_picocom  weight.c  weight.h
frontend/: .eslintrc.json  index.html  package-lock.json  package.json
frontend/src/: App.jsx  PageLayout.jsx  PageLayout.module.css  index.css
frontend/src/context/: AuthenticationContextProvider.jsx
frontend/src/css-components/: Dashboard.css  DogDetails.css  WeighButton.css  WeightTracker.css  WeightTrackerPopUp.css
frontend/src/firebase/: firebase.jsx
frontend/src/page-components/: Dashboard.jsx  FileDropZone.jsx  FileDropZone.module.css  Settings.jsx  SettingsCentre.jsx  SettingsDogCards.jsx  WeightTracker.jsx
frontend/src/page-components/authentication/: LoginPage.jsx  LoginPage.module.css  SignUp.jsx  SignUp.module.css
frontend/src/page-components/chat/: Chat.jsx  ChatContainer.jsx  ChatContainer.module.css  ChatMessage.jsx  ChatMessage.module.css  ChatSidebar.jsx  ChatSidebar.module.css  SearchResults.jsx  UserListItem.jsx  UserListItem.module.css
frontend/src/page-components/components/: DogDetails.jsx  (+2 more)
(+2 files in other folders)
